# lobster_news_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial_schema.py
app/: config.py  database.py  main.py  models.py  scheduler.py  worker.py
app/services/: filter.py  lobsters.py  notifier.py  storage.py
