[project]
name = "lobster-bot"
version = "1.0.0"
description = "Telegram notification bot for Lobsters (lobste.rs)"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "apscheduler>=3.10.0,<4.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiomysql>=0.2.0",
    "pymysql>=1.1.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.7.0",
    "tenacity>=9.0.0",
    "cryptography>=46.0.7",
]
